--- a/gradle.properties
+++ b/gradle.properties
@@ -3,15 +3,16 @@ org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
 
 # Fabric Properties
-# check these on https://fabricmc.net/develop
+# check these on https://modmuss50.me/fabric.html
 minecraft_version=1.20.1
 yarn_mappings=1.20.1+build.10
-loader_version=0.14.22
+loader_version=0.15.10
 
 # Mod Properties
-mod_version=1.0.0
-maven_group=com.supchikwork
-archives_base_name=awesomefarmer
+mod_version = 1.1
+maven_group = com.supchikwork
+archives_base_name = AwesomeFarmer
 
 # Dependencies
-fabric_version=0.88.1+1.20.1
+# check this on https://modmuss50.me/fabric.html
+fabric_version=0.92.1+1.20.1
