--- a/gradle.properties
+++ b/gradle.properties
@@ -2,17 +2,14 @@
 org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
 
-# Fabric Properties
-# check these on https://modmuss50.me/fabric.html
-minecraft_version=1.20.3
-yarn_mappings=1.20.3+build.1
-loader_version=0.15.11
-
-# Mod Properties
-mod_version = 1.0.2
+mod_version = 1.0.3
 maven_group = com.supchikwork
 archives_base_name = AwesomeFarmer
+# Fabric Properties
+# check these on https://modmuss50.me/fabric.html
+minecraft_version=1.21.1
+yarn_mappings=1.21.1+build.3
+loader_version=0.16.5
 
-# Dependencies
-# check this on https://modmuss50.me/fabric.html
-fabric_version=0.91.1+1.20.3
+# Fabric API
+fabric_version=0.105.0+1.21.1
